public/stylchat.css
html, body{
    height: 100%;
    overflow: auto;
    font: 100% Helvetica, Arial; 
    background-color:#2D3142 !important;
}
#divform {
        background-color: #ffffff;
        width: 100%;
        padding: 0.5vh;
        margin: 0%;
        height: fit-content;
        align-content: center;
    }
#divinput {
        width: 70%; padding: 0.1%;
}
form#chatForm {
        display: flex;
        flex-flow: column;
        flex: auto;
        width: 100%;
        position: sticky;
        bottom: 0;
        margin: 0;
}
#divbtn {float:left; margin-left: 0%; width: 30%; padding:0.1%;}
#divbtn button {width: 100% !important; clear: left;margin-left: 0;}
#messages {
        list-style-type: none;
        margin: 0%;
        padding: 0%;
}
#zoneAffichage{
        display: flex;
        flex-flow: column;
        flex: 1 1 auto;
        height: calc( 100vh / 1.157 );
        overflow-y: scroll;
}
#messages li {
        width: 100%;
        font: 50%}
#messages p{
        margin-bottom: 0 !important; 
}
#messages li:nth-child(odd) { background-color: #DBD9DB; }
#messages li:nth-child(even) { background-color: #AFD0D6;}
#connect { background-color: #3DDC97 !important; }
#disconnect { background-color: #FCB07E !important;}
#errors {
        margin-bottom: 0px;
    }

